[tool.poetry]
name = "nutshell-lnurl"
version = "0.1.0"
description = "Cashu LNURL middleware"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.103.0"
uvicorn = "0.23.2"
loguru = "^0.7.2"
cashu = "^0.14.0"
ruff = "^0.1.6"
environs = "^9.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
black = "23.11.0"
mypy = "1.7.1"
pydantic = "1.10.13"

[tool.ruff]
# Same as Black. but black has a 10% overflow rule
line-length = 150
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
# (`I`) means isorting
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
